--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
           <h1 class="Number-Text">Number Guesser</h1>
             <h4 class="Number-Text">Number can be between 1 to 100</h4>
-            <span id="OutputText" class="Number-Text">Enter A number Above</span>
+            <span id="OutputText" class="Number-Text">Enter A number</span>
             <div class="div-forcenter">
               <input
                 type="number"
